<resources>
    <string name="app_name">SSURoom</string>
    <string name="roomlist">Roomlist</string>
    <string name="favorite">Favor</string>
    <string name="map">Map</string>
    <string name="chat">Chat</string>"
    <string name="my_info">My info</string>
    <string name="home">Home</string>
    <string name="filter">Filter</string>
    <string name="search_hint">Region or Station name</string>
    <string name="filterDescription">Find some items via filter</string>
    <string name="priceLevel">Price (10000KRW)</string>
    <string name="login">Login</string>
    <string name="register">Register"</string>
    <string name="register_prompt">Don\'t have an account? Register</string>
    <string name="login_prompt">Already have an account? Login</string>
    <string name="app_slogan">An empty space for new relationships</string>
    <string name="name">name</string>
    <string name="email">email</string>
    <string name="phone">phone number</string>
    <string name="password">password (more than 8 length)</string>
    <string name="password_confirm">password_confirm</string>
    <string name="verification_code">Auth code</string>
    <string name="check">check</string>
    <string name="email_available">available</string>
    <string name="email_unavailable">unavailable</string>
    <string name="verify">Verify</string>


</resources>